# portenta-h7-async

./: Cargo.toml  Embed.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: blinky.rs  serial.rs  usb_echo.rs  usb_serial.rs
src/: led.rs  lib.rs  panic.rs  sys.rs
