[package]
name = "portenta-h7-async"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7"

embassy-stm32 = { version = "0.1.0", git = "https://github.com/gdobato/embassy.git", branch = "adapt-uart-configuration", features = [
  "nightly",
  "unstable-traits",
  "defmt",
  "stm32h747xi-cm7",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "exti",
  "embedded-sdmmc",
  "chrono",
] }
embassy-sync = { version = "0.4.0", git = "https://github.com/gdobato/embassy.git", branch = "adapt-uart-configuration", features = [
  "defmt",
] }
embassy-executor = { version = "0.3.1", git = "https://github.com/gdobato/embassy.git", branch = "adapt-uart-configuration", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.1.2", git = "https://github.com/gdobato/embassy.git", branch = "adapt-uart-configuration", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "unstable-traits",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.1.0", git = "https://github.com/gdobato/embassy.git", branch = "adapt-uart-configuration", features = [
  "defmt",
] }
defmt = "=0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.6"
embedded-io = "0.6.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "2.0.0", features = ["nightly"] }
chrono = { version = "^0.4", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
