[package]
name = "portenta-h7-async"
version = "0.1.0"
edition = "2021"

[[example]]
name = "usb_serial"
required-features = ["usb"]

[features]
usb = []

[dependencies]
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7"

embassy-stm32 = { rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
  "stm32h747xi-cm7",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "exti",
  "embedded-sdmmc",
  "chrono",
  "nightly",
  "unstable-traits",
] }

embassy-sync = { rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
] }

embassy-executor = { rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64", git = "https://github.com/embassy-rs/embassy.git", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }

embassy-time = { rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
  "unstable-traits",
] }

embassy-usb = { rev = "b4bc9ac028568dfb3896dfb00cbd1e181863fd64", git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
] }

defmt = "=0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.6"
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "2.0.0", features = ["nightly"] }
chrono = { version = "^0.4", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
